--- a/NEWS
+++ b/NEWS
@@ -49,6 +49,7 @@ a fork (if PKCS #11 functionality is desirable).
 ** libgnutls: Depend on p11-kit 0.11.
 
 ** API and ABI modifications:
+gnutls_dtls_get_timeout: Added
 gnutls_verify_stored_pubkey: Added
 gnutls_store_pubkey: Added
 gnutls_store_commitment: Added
