The public key storage backend was made extendable. Added self test for the pubkey  trust default backend.

--- a/doc/cha-cert-auth.texi
+++ b/doc/cha-cert-auth.texi
@@ -310,25 +310,9 @@ not yet active.
 
 The storage and verification functions may be used with the default
 text file based back-end, or another back-end may be specified. That
-should contain storage and retrieval functions as shown below.
-@example
-  typedef int (*gnutls_tdb_store_func) (const char* db_name, 
-                                        const char* host,
-                                        const char* service,
-                                        time_t expiration,
-                                        const gnutls_datum_t* pubkey);
-  typedef int (*gnutls_tdb_store_commitment_func) (const char* db_name,
-                                             const char* host,
-                                             const char* service,
-                                             time_t expiration,
-                                             gnutls_digest_algorithm_t halgo,
-                                             const gnutls_datum_t* hash);
+should contain storage and retrieval functions and specified as below.
 
-  typedef int (*gnutls_tdb_retr_func) (const char* db_name, 
-                                       const char* host,
-                                       const char* service,
-                                       const gnutls_datum_t *pubkey);
-@end example
+@showfuncE{gnutls_tdb_init,gnutls_tdb_deinit,gnutls_tdb_set_verify_func,gnutls_tdb_set_store_func,gnutls_tdb_set_store_commitment_func}
 
 @node OpenPGP certificates
 @section @acronym{OpenPGP} certificates
