--- a/NEWS
+++ b/NEWS
@@ -62,6 +62,11 @@ gnutls_priority_sign_list: Added
 gnutls_priority_protocol_list: Added
 gnutls_priority_compression_list: Added
 gnutls_priority_ecc_curve_list: Added
+gnutls_tdb_init: Added
+gnutls_tdb_set_store_func: Added
+gnutls_tdb_set_store_commitment_func: Added
+gnutls_tdb_set_verify_func: Added
+gnutls_tdb_deinit: Added
 
 
 * Version 3.0.12 (released 2012-01-20)
