--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
-* Version 3.0.13 (unreleased)
+* Version 3.0.13 (released 2012-02-18)
 
 ** gnutls-cli: added the --ocsp option which will verify
 the peer's certificate with OCSP.
