Link with local libopts if the installed is an old one.

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,15 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+* Version 3.0.15 (unreleased)
+
+** command line apps: Link with local libopts if the installed
+is an old one.
+
+** API and ABI modifications:
+No changes since last version.
+
+
 * Version 3.0.14 (released 2012-02-24)
 
 ** command line apps: Included libopts doesn't get installed
