--- a/NEWS
+++ b/NEWS
@@ -17,6 +17,7 @@ Reported by Matthew Hall.
 
 ** libgnutls: Corrected issue with select() that affected
 FreeBSD. This prevented establishing DTLS sessions.
+Reported by Andreas Metzler.
 
 ** libgnutls: Corrected rehandshake and resumption
 operations in DTLS. Reported by Sean Buckheister.
