--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,9 @@ Version 2.12.17 (unreleased)
 ** libgnutls: Corrections in record packet parsing.
 Reported by Matthew Hall.
 
+** libgnutls: PKCS #11 objects that do not have ID
+no longer crash listing. Reported by Sven Geggus.
+
 ** API and ABI modifications:
 No changes since last version.
 
