Some updates on supplemental data handling.

--- a/doc/latex/gnutls.bib
+++ b/doc/latex/gnutls.bib
@@ -16,6 +16,15 @@
 	url = "http://www.ietf.org/rfc/rfc2246"
 }
 
+@Misc{ RFC4680,
+	author = "S. Santesson",
+	title = "{TLS Handshake Message for Supplemental Data}",
+	month = "September",
+	year = "2006",
+	note = "Available from \url{http://www.ietf.org/rfc/rfc4680}",
+	url = "http://www.ietf.org/rfc/rfc4680"
+}
+
 @Misc{ RFC4514,
 	author = "Kurt D.  Zeilenga",
 	title = "{Lightweight Directory Access Protocol (LDAP): String Representation of Distinguished Names}",
