updated front-page to include all contributors.

--- a/doc/latex/cover.tex
+++ b/doc/latex/cover.tex
@@ -1,4 +1,12 @@
 \thispagestyle{empty}
+
+\begin{quotation}
+This document includes text contributed by
+Nikos Mavrogiannopoulos, Simon Josefsson, Daiki Ueno, 
+Carolin Latze and Andrew McDonald. Several corrections are due
+to Patrick Pelletier and Andreas Metzler.
+\end{quotation}
+
 \vspace*{\stretch{2}}
 
 
