--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@ See the end for copying conditions.
 
 ** libgnutls: Corrected SRP-RSA ciphersuites when used under TLS 1.2.
 
+** libgnutls: included assembler files for MacOSX.
+
 ** p11tool: Small fixes in handling of the --private command 
 line option.
 
