--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,8 @@ See the end for copying conditions.
 
 Version 2.12.18 (unreleased)
 
+** minitasn1: Upgraded to libtasn1 version 2.12.
+
 ** Corrected SRP-RSA ciphersuites when used under TLS 1.2.
 
 ** Fixed leaks in key generation. Reported by Sam Varshavchik,
