--- a/NEWS
+++ b/NEWS
@@ -3,9 +3,9 @@ Copyright (C) 2000, 2001, 2002, 2003, 2004, 2005,
               2006, 2007, 2008, 2009, 2010, 2011 Free Software Foundation, Inc.
 See the end for copying conditions.
 
-Version 2.12.18 (unreleased)
+Version 2.12.18 (released 2012-03-16)
 
-** minitasn1: Upgraded to libtasn1 version 2.12.
+** minitasn1: Upgraded to libtasn1 version 2.12 (pre-release).
 
 ** Corrected SRP-RSA ciphersuites when used under TLS 1.2.
 
