--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,14 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+* Version 3.0.17 (released 2012-03-17)
+
+** command line apps: Always link with local libopts.
+
+** API and ABI modifications:
+No changes since last version.
+
+
 * Version 3.0.16 (released 2012-03-16)
 
 ** minitasn1: Upgraded to libtasn1 version 2.12 (pre-release).
