Applied patch to cast days to (time_t) before converting it to seconds to prevent a Y2K38 bug. Patch by Robert Millan.

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,15 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+* Version 3.0.18 (unreleased)
+
+** certtool: Avoid a Y2K38 bug when generating certificates.
+Patch by Robert Millan.
+
+** API and ABI modifications:
+No changes since last version.
+
+
 * Version 3.0.17 (released 2012-03-17)
 
 ** command line apps: Always link with local libopts.
