set release date

--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
-* Version 3.0.18 (unreleased)
+* Version 3.0.18 (released 2012-04-02)
 
 ** certtool: Avoid a Y2K38 bug when generating certificates.
 Patch by Robert Millan.
